--- a/views/account_invoice.xml
+++ b/views/account_invoice.xml
@@ -655,14 +655,14 @@
             <field eval="1" name="sequence"/>
             <field name="view_mode">tree</field>
             <field name="view_id" ref="liabilities_invoice_tree"/>
-            <field name="act_window_id" ref="action_invoice_refund_out_tree"/>
+            <field name="act_window_id" ref="account.action_invoice_refund_out_tree"/>
         </record>
 
         <record id="action_invoice_refund_out_tree_form" model="ir.actions.act_window.view">
             <field eval="2" name="sequence"/>
             <field name="view_mode">form</field>
             <field name="view_id" ref="liabilities_invoice_form"/>
-            <field name="act_window_id" ref="action_invoice_refund_out_tree"/>
+            <field name="act_window_id" ref="account.action_invoice_refund_out_tree"/>
         </record>
 
         <record id="action_invoice_tree_pending_invoice" model="ir.actions.act_window">
