--- a/views/account_invoice.xml
+++ b/views/account_invoice.xml
@@ -26,7 +26,7 @@
 
             <record id="action_property_liabilities_features" model="ir.actions.act_window">
                 <field name="name">Featues</field>
-                <field name="res_model">property.building</field>
+                <field name="res_model">property.liabilities.features</field>
                 <field name="view_type">form</field>
                 <field name="view_mode">form</field>
             </record>
