--- a/views/account_invoice.xml
+++ b/views/account_invoice.xml
@@ -28,7 +28,7 @@
                 <field name="name">Featues</field>
                 <field name="res_model">property.liabilities.features</field>
                 <field name="view_type">form</field>
-                <field name="view_mode">form</field>
+                <field name="view_mode">tree,form</field>
             </record>
       </data>
 </odoo>
