--- a/views/account_invoice.xml
+++ b/views/account_invoice.xml
@@ -25,10 +25,11 @@
             </record>
 
             <record id="action_property_liabilities_features" model="ir.actions.act_window">
-                <field name="name">Featues</field>
+                <field name="name">Features</field>
                 <field name="res_model">property.liabilities.features</field>
                 <field name="view_type">form</field>
                 <field name="view_mode">tree,form</field>
             </record>
+            <menuitem name="Features" id="ofimatica_liabilities_features_menu" action="action_property_liabilities_features" parent="ofimatica_liabilities_parent_menu" sequence="9"/>
       </data>
 </odoo>
