--- a/views/asambleas.xml
+++ b/views/asambleas.xml
@@ -1,35 +1,159 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" ?>
 <odoo>
-      <data>
-            <record id="view_property_liabilities_features_tree" model="ir.ui.view">
-                <field name="name">Features</field>
-                <field name="model">liabilities.features</field>
-                <field name="priority" eval="1"/>
-                <field name="arch" type="xml">
-                    <tree>
-                        <field name="name"/>
-                    </tree>
-                </field>
-            </record>
+    <data>
 
-            <record id="view_property_liabilities__form" model="ir.ui.view">
-                <field name="name">Features</field>
-                <field name="model">liabilities.features</field>
-                <field name="priority" eval="1"/>
-                <field name="arch" type="xml">
-                    <form>
-                        <p>Contenido en Desarrollo</p>
-                        <field name="name"/>
-                    </form>
-                </field>
-            </record>
 
-            <record id="action_property_liabilities_features" model="ir.actions.act_window">
-                <field name="name">Features</field>
-                <field name="res_model">liabilities.features</field>
-                <field name="view_type">form</field>
-                <field name="view_mode">tree,form</field>
-            </record>
-            <menuitem name="Features" id="ofimatica_liabilities_features_menu" action="action_property_liabilities_features" parent="ofimatica_liabilities_recibos_menu" sequence="9"/>
-      </data>
+        <record id="view_property_building_tree" model="ir.ui.view">
+            <field name="name">Inmuebles</field>
+            <field name="model">liabilities.asambleas</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="nombre"/>
+                    <field name="type_prop"/>
+                    <field name="administrator_id"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_property_building_form" model="ir.ui.view">
+            <field name="name">Inmueble</field>
+            <field name="model">property.building</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive">
+                                <field name="active" widget="boolean_button" options='{"terminology": "archive"}'/>
+                            </button>
+                        </div>
+                        <group string="Informacion de Inmueble">
+                            <group string="Identification">
+                                <field name="can_edit_detail" groups="ofimatica_property.group_property_super_manager"/>
+                                <field name="type_prop"/>
+                                <field name="administrator_id"/>
+                            </group>
+
+                            <group string="Ubicacion Interna">
+                                <div class="o_address_format">
+                                    <field name="nombre" placeholder="Numero de la propiedad" class="o_address_street"/>
+                                </div>
+                            </group>
+
+                        </group>
+                        <notebook attrs="{'invisible': [('can_edit_detail', '=', False)]}">
+                            <page string="Detalles de Inmueble">
+                                <group string="Acerca de la propiedad">
+                                    <field name="type_prop" attrs="{'readonly': [('can_edit_detail', '=', False)]}" options="{'no_quick_create': True, 'no_create_edit' : True}"/>
+                                    <field name="purpose_prop" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="land_id" readonly="1"/>
+                                    <field name="rented_room" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="tenant_id" attrs="{'invisible': [('rented_room', '=', False)]}"/>
+                                    <field name="rent_domain" attrs="{'readonly': [('can_edit_detail', '=', False)]}" />
+                                </group>
+                                <group string="Detalles del inmueble">
+                                    <field name="dormitorios" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="baños" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="balcones" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="mobiliario" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="aditional_room" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                    <field name="property_services" attrs="{'readonly': [('can_edit_detail', '=', False)]}" />
+                                    <field name="society_services" attrs="{'readonly': [('can_edit_detail', '=', False)]}"/>
+                                </group>
+                                <field name="note" class="oe_inline" placeholder="Note"/>
+                                <div class="oe_clear"/>
+                            </page>
+                            <page string="Familia">
+                                <field name="familia_ids">
+                                    <tree editable="bootom">
+                                        <field name="parentezco"/>
+                                        <field name="nombre"/>
+                                        <field name="apellidos"/>
+                                        <field name="fecha_nacimiento"/>
+                                        <field name="emergency_name"/>
+                                        <field name="emergency_tel"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page string="Colaboradores" autofocus="autofocus">
+                                <field name="helper_ids">
+                                    <tree editable="bootom">
+                                        <field name="funcion"/>
+                                        <field name="nombre"/>
+                                        <field name="apellido"/>
+                                        <field name="doc_type"/>
+                                        <field name="doc_id"/>
+                                        <field name="telefono"/>
+                                        <field name="celular"/>
+                                    </tree>
+                                </field>
+                            </page>
+
+                            <page string="Vehiculos">
+                               <field name="vehiculos_ids">
+                                    <tree editable="bootom">
+                                        <field name="tipo"/>
+                                        <field name="propietario"/>
+                                        <field name="marca"/>
+                                        <field name="modelo"/>
+                                        <field name="placa"/>
+                                        <field name="color"/>
+                                        <field name="parqueadero"/>
+                                    </tree>
+                                </field>
+                                <br/>
+                                <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
+                                    <h3>Nota: Recuerde que esta informacion debe ir exactamente igual a como aparece en la tarjeta de propiedad</h3>
+                                </div>
+                            </page>
+                            <page string="Mascotas">
+                                <field name="mascotas_ids">
+                                    <tree editable="bootom">
+                                        <field name="raza"/>
+                                        <field name="nombre"/>
+                                        <field name="color"/>
+                                        <field name="seña"/>
+                                        <field name="placa"/>
+                                    </tree>
+                                </field>
+                            </page>
+                        </notebook>
+
+
+                    </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"
+                               groups="base.group_user"/>
+                        <field name="message_ids" widget="mail_thread" placeholder="Escribe un mensaje..."/>
+                    </div>
+                </form>
+            </field>
+        </record>
+
+
+        <record id="view_property_building_filter" model="ir.ui.view">
+            <field name="name">Inmuebles</field>
+            <field name="model">liabilities.asambleas</field>
+            <field name="type">search</field>
+            <field name="arch" type="xml">
+                <search string="Search">
+                    <field name="nombre"/>
+                </search>
+            </field>
+        </record>
+
+
+        <record id="action_property_building" model="ir.actions.act_window">
+            <field name="name">Asambleas</field>
+            <field name="res_model">liabilities.asambleas</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form,pivot</field>
+        </record>
+
+        <menuitem name="Inmuebles" id="menu_property_building"
+                  action="action_property_building" parent="base.menu_property_info"/>
+
+
+    </data>
 </odoo>
