--- a/views/asambleas.xml
+++ b/views/asambleas.xml
@@ -52,6 +52,6 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form,pivot</field>
         </record>
-        action="ofimatica_liabilities.action_liabilities_asambleas"
+        <menuitem name="Asambleas" id="ofimatica_liabilities_asamblea_menu" parent="ofimatica_liabilities_asambleas_menu" sequence="1"/>
     </data>
 </odoo>
