--- a/views/menus.xml
+++ b/views/menus.xml
@@ -12,7 +12,7 @@
         <menuitem name="Paz y salvos" id="ofimatica_liabilities_paz_salvo_menu" action="board.open_board_my_dash_action" parent="ofimatica_liabilities_parent_menu" sequence="130"/>
         <menuitem name="Comparativo Presupuestos" id="ofimatica_liabilities_comparativo_menu" action="board.open_board_my_dash_action" parent="ofimatica_liabilities_parent_menu" sequence="150"/>
         <menuitem name="Votacion" id="ofimatica_liabilities_votacion_menu" action="board.open_board_my_dash_action" parent="ofimatica_liabilities_parent_menu" sequence="170"/>
-        <menuitem name="Encuestas" id="ofimatica_liabilities_encuestas_menu" action="board.open_board_my_dash_action" parent="ofimatica_liabilities_parent_menu" sequence="190"/>
+        <menuitem name="Encuestas" id="ofimatica_liabilities_encuestas_menu" action="survey.action_survey_form" parent="ofimatica_liabilities_parent_menu" sequence="190"/>
         <menuitem name="Asambleas" id="ofimatica_liabilities_asambleas_menu" parent="ofimatica_liabilities_parent_menu" sequence="210"/>
         <menuitem name="Asambleas" id="asamblea_menu" action="action_liabilities_asambleas" parent="ofimatica_liabilities_asambleas_menu" sequence="1"/>
         <menuitem name="Mis Foros" id="ofimatica_liabilities_foros_parent_menu" parent="ofimatica_liabilities_parent_menu" sequence="220"/>
